CHATS_SIT/force-app/main/default/objects/Batchsit_t_prnt_dtl__x/Batchsit_t_prnt_dtl__x.object-meta.xml
<CustomObject>
    <description>batchsit$t_prnt_dtl</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>batchsit$t_prnt_dtl</externalName>
    <label>Batchsit$t_prnt_dtl</label>
    <pluralLabel>Batchsit$t_prnt_dtl</pluralLabel>
</CustomObject>