CHATS_SIT/force-app/main/default/objects/Batchsit_t_prnt_dtl__x/fields/cde_corr_status__c.field-meta.xml
<CustomField>
    <fullName>cde_corr_status__c</fullName>
    <description>cde_corr_status</description>
    <externalDeveloperName>cde_corr_status</externalDeveloperName>
    <label>Cde_corr_status</label>
    <length>3</length>
    <type>Text</type>
</CustomField>