CHATS_SIT/force-app/main/default/objects/Batchsit_t_prnt_dtl__x/fields/cde_lang_doc__c.field-meta.xml
<CustomField>
    <fullName>cde_lang_doc__c</fullName>
    <description>cde_lang_doc</description>
    <externalDeveloperName>cde_lang_doc</externalDeveloperName>
    <label>Cde_lang_doc</label>
    <length>3</length>
    <type>Text</type>
</CustomField>