CHATS_SIT/force-app/main/default/objects/Batchsit_t_prnt_dtl__x/fields/cde_method_print__c.field-meta.xml
<CustomField>
    <fullName>cde_method_print__c</fullName>
    <description>cde_method_print</description>
    <externalDeveloperName>cde_method_print</externalDeveloperName>
    <label>Cde_method_print</label>
    <length>3</length>
    <type>Text</type>
</CustomField>