CHATS_SIT/force-app/main/default/objects/Batchsit_t_prnt_dtl__x/fields/cde_type_rcpt__c.field-meta.xml
<CustomField>
    <fullName>cde_type_rcpt__c</fullName>
    <description>cde_type_rcpt</description>
    <externalDeveloperName>cde_type_rcpt</externalDeveloperName>
    <label>Cde_type_rcpt</label>
    <length>3</length>
    <type>Text</type>
</CustomField>