CHATS_SIT/force-app/main/default/objects/Batchsit_t_prnt_dtl__x/fields/cr107_checklist__c.field-meta.xml
<CustomField>
    <fullName>cr107_checklist__c</fullName>
    <description>cr107_checklist</description>
    <externalDeveloperName>cr107_checklist</externalDeveloperName>
    <label>Cr107_checklist</label>
    <length>4099</length>
    <type>LongTextArea</type>
</CustomField>