CHATS_SIT/force-app/main/default/objects/Batchsit_t_prnt_dtl__x/fields/cr107_other_text__c.field-meta.xml
<CustomField>
    <fullName>cr107_other_text__c</fullName>
    <description>cr107_other_text</description>
    <externalDeveloperName>cr107_other_text</externalDeveloperName>
    <label>Cr107_other_text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>