CHATS_SIT/force-app/main/default/objects/Batchsit_t_prnt_dtl__x/fields/cr702_checklist__c.field-meta.xml
<CustomField>
    <fullName>cr702_checklist__c</fullName>
    <description>cr702_checklist</description>
    <externalDeveloperName>cr702_checklist</externalDeveloperName>
    <label>Cr702_checklist</label>
    <length>4099</length>
    <type>LongTextArea</type>
</CustomField>