CHATS_SIT/force-app/main/default/objects/Batchsit_t_prnt_dtl__x/fields/cr702_text__c.field-meta.xml
<CustomField>
    <fullName>cr702_text__c</fullName>
    <description>cr702_text</description>
    <externalDeveloperName>cr702_text</externalDeveloperName>
    <label>Cr702_text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>