CHATS_SIT/force-app/main/default/objects/Batchsit_t_prnt_dtl__x/fields/createdbyid__c.field-meta.xml
<CustomField>
    <fullName>createdbyid__c</fullName>
    <description>createdbyid</description>
    <externalDeveloperName>createdbyid</externalDeveloperName>
    <label>Createdbyid</label>
    <length>18</length>
    <type>Text</type>
</CustomField>