CHATS_SIT/force-app/main/default/objects/Batchsit_t_prnt_dtl__x/fields/createddate__c.field-meta.xml
<CustomField>
    <fullName>createddate__c</fullName>
    <description>createddate</description>
    <externalDeveloperName>createddate</externalDeveloperName>
    <label>Createddate</label>
    <type>DateTime</type>
</CustomField>