CHATS_SIT/force-app/main/default/objects/Batchsit_t_prnt_dtl__x/fields/dte_prntd__c.field-meta.xml
<CustomField>
    <fullName>dte_prntd__c</fullName>
    <description>dte_prntd</description>
    <externalDeveloperName>dte_prntd</externalDeveloperName>
    <label>Dte_prntd</label>
    <type>Date</type>
</CustomField>