CHATS_SIT/force-app/main/default/objects/Batchsit_t_prnt_dtl__x/fields/dte_reqstd__c.field-meta.xml
<CustomField>
    <fullName>dte_reqstd__c</fullName>
    <description>dte_reqstd</description>
    <externalDeveloperName>dte_reqstd</externalDeveloperName>
    <label>Dte_reqstd</label>
    <type>Date</type>
</CustomField>