CHATS_SIT/force-app/main/default/objects/Batchsit_t_prnt_dtl__x/fields/dte_suppressed__c.field-meta.xml
<CustomField>
    <fullName>dte_suppressed__c</fullName>
    <description>dte_suppressed</description>
    <externalDeveloperName>dte_suppressed</externalDeveloperName>
    <label>Dte_suppressed</label>
    <type>Date</type>
</CustomField>