CHATS_SIT/force-app/main/default/objects/Batchsit_t_prnt_dtl__x/fields/idn_adjmt__c.field-meta.xml
<CustomField>
    <fullName>idn_adjmt__c</fullName>
    <description>idn_adjmt</description>
    <externalDeveloperName>idn_adjmt</externalDeveloperName>
    <label>Idn_adjmt</label>
    <length>18</length>
    <type>Text</type>
</CustomField>