CHATS_SIT/force-app/main/default/objects/Batchsit_t_prnt_dtl__x/fields/idn_adjustment_address__c.field-meta.xml
<CustomField>
    <fullName>idn_adjustment_address__c</fullName>
    <description>idn_adjustment_address</description>
    <externalDeveloperName>idn_adjustment_address</externalDeveloperName>
    <label>Idn_adjustment_address</label>
    <length>18</length>
    <type>Text</type>
</CustomField>