CHATS_SIT/force-app/main/default/objects/Batchsit_t_prnt_dtl__x/fields/idn_agrmt_fiscal__c.field-meta.xml
<CustomField>
    <fullName>idn_agrmt_fiscal__c</fullName>
    <description>idn_agrmt_fiscal</description>
    <externalDeveloperName>idn_agrmt_fiscal</externalDeveloperName>
    <label>Idn_agrmt_fiscal</label>
    <length>18</length>
    <type>Text</type>
</CustomField>