CHATS_SIT/force-app/main/default/objects/Batchsit_t_prnt_dtl__x/fields/idn_auth__c.field-meta.xml
<CustomField>
    <fullName>idn_auth__c</fullName>
    <description>idn_auth</description>
    <externalDeveloperName>idn_auth</externalDeveloperName>
    <label>Idn_auth</label>
    <length>18</length>
    <type>Text</type>
</CustomField>