CHATS_SIT/force-app/main/default/objects/Batchsit_t_prnt_dtl__x/fields/idn_case__c.field-meta.xml
<CustomField>
    <fullName>idn_case__c</fullName>
    <description>idn_case</description>
    <externalDeveloperName>idn_case</externalDeveloperName>
    <label>Idn_case</label>
    <length>50</length>
    <type>Text</type>
</CustomField>