CHATS_SIT/force-app/main/default/objects/Batchsit_t_prnt_dtl__x/fields/idn_client__c.field-meta.xml
<CustomField>
    <fullName>idn_client__c</fullName>
    <description>idn_client</description>
    <externalDeveloperName>idn_client</externalDeveloperName>
    <label>Idn_client</label>
    <length>18</length>
    <type>Text</type>
</CustomField>