CHATS_SIT/force-app/main/default/objects/Batchsit_t_prnt_dtl__x/fields/idn_corr_nam__c.field-meta.xml
<CustomField>
    <fullName>idn_corr_nam__c</fullName>
    <description>idn_corr_nam</description>
    <externalDeveloperName>idn_corr_nam</externalDeveloperName>
    <label>Idn_corr_nam</label>
    <length>80</length>
    <type>Text</type>
</CustomField>