CHATS_SIT/force-app/main/default/objects/Batchsit_t_prnt_dtl__x/fields/idn_county__c.field-meta.xml
<CustomField>
    <fullName>idn_county__c</fullName>
    <description>idn_county</description>
    <externalDeveloperName>idn_county</externalDeveloperName>
    <label>Idn_county</label>
    <length>50</length>
    <type>Text</type>
</CustomField>