CHATS_SIT/force-app/main/default/objects/Batchsit_t_prnt_dtl__x/fields/idn_pmt__c.field-meta.xml
<CustomField>
    <fullName>idn_pmt__c</fullName>
    <description>idn_pmt</description>
    <externalDeveloperName>idn_pmt</externalDeveloperName>
    <label>Idn_pmt</label>
    <length>50</length>
    <type>Text</type>
</CustomField>