CHATS_SIT/force-app/main/default/objects/Batchsit_t_prnt_dtl__x/fields/idn_prnt_dtl__c.field-meta.xml
<CustomField>
    <fullName>idn_prnt_dtl__c</fullName>
    <description>idn_prnt_dtl</description>
    <externalDeveloperName>idn_prnt_dtl</externalDeveloperName>
    <label>Idn_prnt_dtl</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>