CHATS_SIT/force-app/main/default/objects/Batchsit_t_prnt_dtl__x/fields/idn_provr__c.field-meta.xml
<CustomField>
    <fullName>idn_provr__c</fullName>
    <description>idn_provr</description>
    <externalDeveloperName>idn_provr</externalDeveloperName>
    <label>Idn_provr</label>
    <length>50</length>
    <type>Text</type>
</CustomField>