CHATS_SIT/force-app/main/default/objects/Batchsit_t_prnt_dtl__x/fields/idn_user_reqstd__c.field-meta.xml
<CustomField>
    <fullName>idn_user_reqstd__c</fullName>
    <description>idn_user_reqstd</description>
    <externalDeveloperName>idn_user_reqstd</externalDeveloperName>
    <label>Idn_user_reqstd</label>
    <length>18</length>
    <type>Text</type>
</CustomField>