CHATS_SIT/force-app/main/default/objects/Batchsit_t_prnt_dtl__x/fields/lastmodifiedbyid__c.field-meta.xml
<CustomField>
    <fullName>lastmodifiedbyid__c</fullName>
    <description>lastmodifiedbyid</description>
    <externalDeveloperName>lastmodifiedbyid</externalDeveloperName>
    <label>Lastmodifiedbyid</label>
    <length>18</length>
    <type>Text</type>
</CustomField>