CHATS_SIT/force-app/main/default/objects/Batchsit_t_prnt_dtl__x/fields/lastmodifieddate__c.field-meta.xml
<CustomField>
    <fullName>lastmodifieddate__c</fullName>
    <description>lastmodifieddate</description>
    <externalDeveloperName>lastmodifieddate</externalDeveloperName>
    <label>Lastmodifieddate</label>
    <type>DateTime</type>
</CustomField>