CHATS_SIT/force-app/main/default/objects/Batchsit_t_prnt_dtl__x/fields/nam_corr__c.field-meta.xml
<CustomField>
    <fullName>nam_corr__c</fullName>
    <description>nam_corr</description>
    <externalDeveloperName>nam_corr</externalDeveloperName>
    <label>Nam_corr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>