CHATS_SIT/force-app/main/default/objects/Batchsit_t_prnt_dtl__x/fields/requested_by__c.field-meta.xml
<CustomField>
    <fullName>requested_by__c</fullName>
    <description>requested_by</description>
    <externalDeveloperName>requested_by</externalDeveloperName>
    <label>Requested_by</label>
    <length>50</length>
    <type>Text</type>
</CustomField>