CHATS_SIT/force-app/main/default/objects/Batchsit_t_prnt_dtl__x/fields/rsn_code__c.field-meta.xml
<CustomField>
    <fullName>rsn_code__c</fullName>
    <description>rsn_code</description>
    <externalDeveloperName>rsn_code</externalDeveloperName>
    <label>Rsn_code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>