CHATS_SIT/force-app/main/default/objects/Batchsit_t_prnt_dtl__x/fields/suppressed__c.field-meta.xml
<CustomField>
    <fullName>suppressed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>suppressed</description>
    <externalDeveloperName>suppressed</externalDeveloperName>
    <label>Suppressed</label>
    <type>Checkbox</type>
</CustomField>