CHATS_SIT/force-app/main/default/objects/Batchsit_t_prnt_dtl__x/fields/txt_status_corr_read__c.field-meta.xml
<CustomField>
    <fullName>txt_status_corr_read__c</fullName>
    <description>txt_status_corr_read</description>
    <externalDeveloperName>txt_status_corr_read</externalDeveloperName>
    <label>Txt_status_corr_read</label>
    <length>18</length>
    <type>Text</type>
</CustomField>